--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -21,6 +21,8 @@
     }
     &-img{
         height: 120px;
+        width: 120px;
+        object-fit: cover;
     }
     &:hover{
         box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
