--- a/client/src/pages/History/history.scss
+++ b/client/src/pages/History/history.scss
@@ -1,7 +1,24 @@
 .history{
+    
+    display: flex;
+
+    p{
+        margin-top: 10px;
+    }
+    &-info{
+        margin-left: 10px;
+    }
+
+    &-action{
+        font-size: 20px !important;
+        // font-weight: normal;
+        // font-style: italic;
+    }
     &-img{
         width:  300px;
         height: 200px;
         object-fit: cover;
     }
+
+
 }
