--- a/client/src/pages/Ingredients/ingredients.scss
+++ b/client/src/pages/Ingredients/ingredients.scss
@@ -1,9 +1,36 @@
-.listIngredients {
+.import {
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 0 20px;
-    width: 100%;
+ 
+    &-info {
+        p {
+            margin-top: 10px;
+            
+        }
+    }
+   
+    &-action{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+    }
+
+    &-search{
+        width: 500px;
+    }
+    &-img {
+        height: 200px;
+        object-fit: contain;
+        width: 340px;
+        margin-right: 20px;
+    }
+    &-container {
+    }
+
+    &-list {
+    }
+}
+
+.title{
+    font-size: 20px;
+    font-weight: 500;
 }
