--- a/client/src/pages/Ingredients/ingredients.scss
+++ b/client/src/pages/Ingredients/ingredients.scss
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    margin: 0 auto;
     max-width: 1200px;
-    padding: 0 20px;
+    padding: 20px;
     width: 100%;
 }
