create import ingredient

--- a/client/src/pages/ImportIngredient/importIngredients.scss
+++ b/client/src/pages/ImportIngredient/importIngredients.scss
@@ -8,10 +8,12 @@
         }
     }
    
+  
     &-action{
         display: flex;
         justify-content: space-between;
         margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     &-search{
