--- a/client/src/pages/Category/category.scss
+++ b/client/src/pages/Category/category.scss
@@ -1,47 +1,7 @@
-.ingredient{
-    display: flex;
-    flex-direction: row;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    padding: 10px;
-    background-color: #fff;
-    margin-right: 10px;
-    &-container{
-        background-color:  rgba(0, 100, 255, 0.13);
-        overflow: hidden;
-        overflow-x: auto;
-        display: flex;
-        padding: 20px 10px;
-        
-    }
-    
-    &-info{
-        margin-right: 10px;
-        min-width: 150px;
-        p{
-            white-space: nowrap; 
-            max-width: 200px; 
-            overflow: hidden;
-            text-overflow: ellipsis; 
-            margin-top: 8px;
-        }
-    }
-    &-img{
-        height: 120px;
-        width: 120px;
-        object-fit: cover;
-    }
-    &:hover{
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
-
-    }
-}
-
-.recipe {
+.category {
     display: flex;
  
     &-info {
-      
         p {
             margin-top: 10px;
             
@@ -95,7 +55,7 @@
     grid-gap: 20px;
   }
 
-  .recipe-item{
+  .category-item{
     display: flex;
     align-items: start;
     justify-content: space-between;
